--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "babel-runtime": "^6.26.0",
     "bcrypt": "^5.1.0",
     "express": "^4.18.2",
+    "ioredis": "^5.3.1",
     "joi": "^17.8.3",
     "jsonwebtoken": "^9.0.0",
+    "lru-cache": "^8.0.4",
     "mongoose": "^7.0.0",
     "node-cron": "^3.0.2",
     "nodemailer": "^6.9.1",
